--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-solid-svg-icons": "^6.5.1"
+		"@fortawesome/fontawesome-free": "^6.5.1",
+		"@fortawesome/free-solid-svg-icons": "^6.5.1",
+		"fortawesome": "^0.0.1-security"
 	}
 }
